--- a/package.json
+++ b/package.json
@@ -25,7 +25,16 @@
     "@nx/eslint-plugin": "18.2.4",
     "@nx/jest": "18.2.4",
     "@nx/js": "18.2.4",
+    "@nx/storybook": "^18.2.4",
+    "@nx/web": "18.2.4",
     "@schematics/angular": "~17.3.0",
+    "@storybook/addon-essentials": "7.6.17",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/angular": "7.6.17",
+    "@storybook/core-server": "7.6.17",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -46,6 +55,7 @@
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "storybook": "^7.5.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2"
@@ -62,6 +72,8 @@
     "@angular/platform-browser": "~17.3.0",
     "@angular/platform-browser-dynamic": "~17.3.0",
     "@angular/router": "~17.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
