--- a/projects/uikit/project.json
+++ b/projects/uikit/project.json
@@ -31,6 +31,54 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint"
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "projects/uikit/.storybook",
+        "browserTarget": "uikit:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/uikit",
+        "configDir": "projects/uikit/.storybook",
+        "browserTarget": "uikit:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c projects/uikit/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "uikit:build-storybook",
+        "staticFilePath": "dist/storybook/uikit",
+        "spa": true
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "uikit:build-storybook:ci"
+        }
+      }
     }
   }
 }
